docs/paper-trades/v5/2026-05-05_report.md
# v5 Paper Trading Report -- 2026-05-05

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 10,591 (+1.06%)** |
| Trades | 62 (L:54 S:8) |
| Win Rate | 77% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | OIL | 475.10 | 465.10 | Rs +590 | TARGET |
| 2 | SHORT | INTRADAY | OIL | 475.10 | 470.15 | Rs +292 | STOPLOSS |
| 3 | SHORT | INTRADAY | VBL | 506.75 | 503.20 | Rs +217 | STOPLOSS |
| 4 | SHORT | INTRADAY | M&MFIN | 303.80 | 301.20 | Rs +213 | STOPLOSS |
| 5 | SHORT | INTRADAY | PNB | 108.68 | 109.73 | Rs -249 | STOPLOSS |
| 6 | SHORT | INTRADAY | BHARTIARTL | 1827.10 | 1804.90 | Rs +289 | TIME_EXIT |
| 7 | SHORT | INTRADAY | DRREDDY | 1287.20 | 1271.00 | Rs +356 | TIME_EXIT |
| 8 | SHORT | INTRADAY | KOTAKBANK | 371.65 | 371.35 | Rs +21 | TIME_EXIT |
| 9 | LONG | SWING | ADANIPORTS | 1697.40 | 1746.80 | Rs +346 | TARGET |
| 10 | LONG | SWING | MOTILALOFS | 821.45 | 831.75 | Rs +103 | STOPLOSS |
| 11 | LONG | SWING | 360ONE | 1055.00 | 1055.30 | Rs +3 | STOPLOSS |
| 12 | LONG | SWING | JIOFIN | 249.36 | 251.06 | Rs +65 | STOPLOSS |
| 13 | LONG | SWING | EICHERMOT | 7212.50 | 7297.00 | Rs +84 | STOPLOSS |
| 14 | LONG | SWING | POLICYBZR | 1679.60 | 1653.30 | Rs -105 | STOPLOSS |
| 15 | LONG | SWING | CHOLAFIN | 1620.20 | 1634.50 | Rs +114 | STOPLOSS |
| 16 | LONG | SWING | LODHA | 911.70 | 920.35 | Rs +69 | STOPLOSS |
| 17 | LONG | SWING | DIXON | 11297.00 | 11639.00 | Rs +342 | TARGET |
| 18 | LONG | SWING | BHEL | 377.05 | 387.10 | Rs +412 | TARGET |
| 19 | LONG | SWING | HAL | 4559.50 | 4670.50 | Rs +333 | TARGET |
| 20 | LONG | SWING | IDEA | 10.52 | 10.97 | Rs +713 | TARGET |
| 21 | LONG | SWING | ADANIPOWER | 227.30 | 232.01 | Rs +278 | TARGET |
| 22 | LONG | SWING | IRCTC | 555.25 | 570.10 | Rs +327 | TARGET |
| 23 | LONG | SWING | IRCTC | 555.25 | 575.20 | Rs +519 | TARGET |
| 24 | LONG | SWING | IDEA | 10.52 | 10.95 | Rs +533 | TARGET |
| 25 | LONG | SWING | IDEA | 10.52 | 10.90 | Rs +445 | TARGET |
| 26 | LONG | SWING | PAYTM | 1114.70 | 1097.80 | Rs -135 | STOPLOSS |
| 27 | LONG | SWING | HAL | 4559.50 | 4622.00 | Rs +188 | STOPLOSS |
| 28 | LONG | SWING | IRCTC | 555.25 | 573.30 | Rs +433 | TARGET |
| 29 | LONG | SWING | GRASIM | 2856.00 | 2838.10 | Rs -54 | SIGNAL_FLIP |
| 30 | LONG | SWING | TMCV | 411.80 | 405.20 | Rs -178 | STOPLOSS |
| 31 | LONG | SWING | SWIGGY | 278.80 | 273.05 | Rs -230 | STOPLOSS |
| 32 | LONG | SWING | HDFCAMC | 2753.60 | 2797.10 | Rs +261 | STOPLOSS |
| 33 | LONG | SWING | BSE | 3711.30 | 3753.00 | Rs +167 | STOPLOSS |
| 34 | LONG | SWING | IRCTC | 555.25 | 566.50 | Rs +270 | STOPLOSS |
| 35 | LONG | SWING | NATIONALUM | 407.80 | 412.75 | Rs +148 | STOPLOSS |
| 36 | LONG | SWING | KEI | 5058.30 | 4950.60 | Rs -323 | STOPLOSS |
| 37 | LONG | SWING | IDEA | 10.52 | 10.80 | Rs +322 | TARGET |
| 38 | LONG | SWING | IDEA | 10.52 | 10.91 | Rs +427 | TARGET |
| 39 | LONG | SWING | MOTILALOFS | 836.60 | 835.55 | Rs -14 | STOPLOSS |
| 40 | LONG | SWING | ADANIPOWER | 227.30 | 229.48 | Rs +98 | STOPLOSS |
| 41 | LONG | SWING | COLPAL | 2169.20 | 2165.30 | Rs -20 | FLAT_FORCE_EXIT |
| 42 | LONG | SWING | HINDZINC | 610.20 | 611.20 | Rs +16 | FLAT_FORCE_EXIT |
| 43 | LONG | SWING | SHRIRAMFIN | 960.45 | 960.25 | Rs -2 | FLAT_FORCE_EXIT |
| 44 | LONG | SWING | HDFCAMC | 2753.60 | 2802.60 | Rs +294 | STOPLOSS |
| 45 | LONG | SWING | ADANIPORTS | 1742.60 | 1739.80 | Rs -20 | FLAT_FORCE_EXIT |
| 46 | LONG | SWING | 360ONE | 1066.50 | 1069.40 | Rs +35 | FLAT_FORCE_EXIT |
| 47 | LONG | SWING | IDEA | 10.52 | 10.87 | Rs +532 | TARGET |
| 48 | LONG | SWING | SHRIRAMFIN | 960.45 | 962.20 | Rs +24 | FLAT_FORCE_EXIT |
| 49 | LONG | SWING | POLYCAB | 8344.50 | 8334.00 | Rs -10 | FLAT_FORCE_EXIT |
| 50 | LONG | SWING | ASTRAL | 1560.40 | 1535.10 | Rs -152 | STOPLOSS |
| 51 | LONG | SWING | BSE | 3711.30 | 3718.30 | Rs +28 | FLAT_FORCE_EXIT |
| 52 | LONG | SWING | IRCTC | 555.25 | 564.70 | Rs +180 | STOPLOSS |
| 53 | LONG | SWING | DABUR | 445.65 | 458.45 | Rs +346 | TARGET |
| 54 | LONG | SWING | M&M | 3106.50 | 3197.60 | Rs +273 | TARGET |
| 55 | LONG | SWING | LTF | 285.65 | 289.75 | Rs +254 | STOPLOSS |
| 56 | LONG | SWING | GRASIM | 2856.00 | 2873.70 | Rs +71 | SIGNAL_FLIP |
| 57 | LONG | SWING | FEDERALBNK | 289.15 | 293.50 | Rs +174 | SIGNAL_FLIP |
| 58 | LONG | SWING | IDEA | 10.52 | 10.81 | Rs +493 | SIGNAL_FLIP |
| 59 | LONG | SWING | NATIONALUM | 407.80 | 412.20 | Rs +145 | SIGNAL_FLIP |
| 60 | LONG | SWING | 360ONE | 1066.50 | 1069.80 | Rs +33 | SIGNAL_FLIP |
| 61 | LONG | SWING | MUTHOOTFIN | 3487.70 | 3443.50 | Rs -221 | STOPLOSS |
| 62 | LONG | SWING | M&M | 3106.50 | 3213.50 | Rs +428 | TARGET |