docs/paper-trades/v6/2026-05-05_report.md
# v5 Paper Trading Report -- 2026-05-05

## Summary

| Metric | Value |
|--------|-------|
| Engine | v5 multi-pool |
| Capital | Rs 10.00L |
| Regime | SIDEWAYS |
| **Net P&L** | **Rs 11,042 (+1.10%)** |
| Trades | 61 (L:50 S:11) |
| Win Rate | 82% |

## Trades

| # | Type | Pool | Stock | Entry | Exit | P&L | Reason |
|---|------|------|-------|-------|------|-----|--------|
| 1 | SHORT | INTRADAY | OIL | 475.10 | 465.10 | Rs +590 | TARGET |
| 2 | SHORT | INTRADAY | OIL | 475.10 | 470.15 | Rs +292 | STOPLOSS |
| 3 | SHORT | INTRADAY | M&MFIN | 303.80 | 299.20 | Rs +340 | TARGET |
| 4 | SHORT | INTRADAY | VBL | 506.75 | 503.20 | Rs +217 | STOPLOSS |
| 5 | SHORT | INTRADAY | LGEINDIA | 1579.20 | 1553.50 | Rs +386 | TARGET |
| 6 | SHORT | INTRADAY | M&MFIN | 303.80 | 304.40 | Rs -50 | FLAT_FORCE_EXIT |
| 7 | SHORT | INTRADAY | PNB | 108.68 | 108.96 | Rs -54 | FLAT_FORCE_EXIT |
| 8 | SHORT | INTRADAY | LGEINDIA | 1579.20 | 1553.50 | Rs +411 | TARGET |
| 9 | SHORT | INTRADAY | BHARTIARTL | 1827.10 | 1804.90 | Rs +266 | TIME_EXIT |
| 10 | SHORT | INTRADAY | DRREDDY | 1287.20 | 1271.00 | Rs +292 | TIME_EXIT |
| 11 | SHORT | INTRADAY | KOTAKBANK | 371.65 | 371.35 | Rs +19 | TIME_EXIT |
| 12 | LONG | SWING | ADANIPORTS | 1697.40 | 1746.80 | Rs +198 | TARGET |
| 13 | LONG | SWING | 360ONE | 1055.00 | 1055.30 | Rs +2 | STOPLOSS |
| 14 | LONG | SWING | GRASIM | 2824.00 | 2840.60 | Rs +33 | STOPLOSS |
| 15 | LONG | SWING | MOTILALOFS | 821.45 | 831.75 | Rs +103 | STOPLOSS |
| 16 | LONG | SWING | LAURUSLABS | 1140.00 | 1162.10 | Rs +155 | STOPLOSS |
| 17 | LONG | SWING | MAXHEALTH | 1002.30 | 1007.20 | Rs +59 | STOPLOSS |
| 18 | LONG | SWING | CHOLAFIN | 1620.20 | 1634.50 | Rs +86 | STOPLOSS |
| 19 | LONG | SWING | BHEL | 377.05 | 387.10 | Rs +372 | TARGET |
| 20 | LONG | SWING | HAL | 4559.50 | 4670.50 | Rs +222 | TARGET |
| 21 | LONG | SWING | ADANIENT | 2442.80 | 2480.70 | Rs +152 | STOPLOSS |
| 22 | LONG | SWING | IDEA | 10.52 | 10.97 | Rs +736 | TARGET |
| 23 | LONG | SWING | ADANIPOWER | 227.30 | 231.94 | Rs +255 | TARGET |
| 24 | LONG | SWING | ETERNAL | 246.15 | 250.29 | Rs +145 | STOPLOSS |
| 25 | LONG | SWING | ETERNAL | 246.15 | 250.29 | Rs +224 | STOPLOSS |
| 26 | LONG | SWING | RELIANCE | 1442.90 | 1456.40 | Rs +122 | STOPLOSS |
| 27 | LONG | SWING | IRCTC | 555.25 | 570.10 | Rs +371 | TARGET |
| 28 | LONG | SWING | DIVISLAB | 6548.00 | 6601.00 | Rs +53 | STOPLOSS |
| 29 | LONG | SWING | IRCTC | 555.25 | 575.20 | Rs +638 | TARGET |
| 30 | LONG | SWING | IDEA | 10.52 | 10.95 | Rs +666 | TARGET |
| 31 | LONG | SWING | NATIONALUM | 407.80 | 418.25 | Rs +251 | TARGET |
| 32 | LONG | SWING | IDEA | 10.52 | 10.90 | Rs +431 | TARGET |
| 33 | LONG | SWING | HAL | 4559.50 | 4622.00 | Rs +188 | STOPLOSS |
| 34 | LONG | SWING | HDFCAMC | 2753.60 | 2809.80 | Rs +225 | TARGET |
| 35 | LONG | SWING | IRCTC | 555.25 | 573.30 | Rs +415 | TARGET |
| 36 | LONG | SWING | HINDZINC | 605.55 | 610.00 | Rs +85 | STOPLOSS |
| 37 | LONG | SWING | HDFCAMC | 2753.60 | 2797.10 | Rs +218 | STOPLOSS |
| 38 | LONG | SWING | BSE | 3711.30 | 3753.00 | Rs +125 | STOPLOSS |
| 39 | LONG | SWING | IRCTC | 555.25 | 566.50 | Rs +270 | STOPLOSS |
| 40 | LONG | SWING | NATIONALUM | 407.80 | 412.75 | Rs +144 | STOPLOSS |
| 41 | LONG | SWING | KEI | 5058.30 | 4950.60 | Rs -215 | STOPLOSS |
| 42 | LONG | SWING | IDEA | 10.52 | 10.80 | Rs +310 | TARGET |
| 43 | LONG | SWING | KEI | 5058.30 | 4992.30 | Rs -132 | STOPLOSS |
| 44 | LONG | SWING | MOTILALOFS | 836.60 | 835.55 | Rs -13 | STOPLOSS |
| 45 | LONG | SWING | COLPAL | 2169.20 | 2165.30 | Rs -16 | FLAT_FORCE_EXIT |
| 46 | LONG | SWING | SHRIRAMFIN | 960.45 | 960.25 | Rs -2 | FLAT_FORCE_EXIT |
| 47 | LONG | SWING | HDFCAMC | 2753.60 | 2802.60 | Rs +245 | STOPLOSS |
| 48 | LONG | SWING | 360ONE | 1066.50 | 1069.40 | Rs +26 | FLAT_FORCE_EXIT |
| 49 | LONG | SWING | SHRIRAMFIN | 960.45 | 962.20 | Rs +24 | FLAT_FORCE_EXIT |
| 50 | LONG | SWING | POLYCAB | 8344.50 | 8334.00 | Rs -10 | FLAT_FORCE_EXIT |
| 51 | LONG | SWING | ASTRAL | 1560.40 | 1535.10 | Rs -126 | STOPLOSS |
| 52 | LONG | SWING | BSE | 3711.30 | 3718.30 | Rs +21 | FLAT_FORCE_EXIT |
| 53 | LONG | SWING | IRCTC | 555.25 | 564.90 | Rs +174 | STOPLOSS |
| 54 | LONG | SWING | DABUR | 445.65 | 458.45 | Rs +294 | TARGET |
| 55 | LONG | SWING | LTF | 286.50 | 289.75 | Rs +75 | STOPLOSS |
| 56 | LONG | SWING | IDEA | 10.52 | 10.80 | Rs +408 | STOPLOSS |
| 57 | LONG | SWING | ADANIPORTS | 1742.60 | 1725.50 | Rs -120 | SIGNAL_FLIP |
| 58 | LONG | SWING | FEDERALBNK | 289.15 | 293.50 | Rs +183 | SIGNAL_FLIP |
| 59 | LONG | SWING | NATIONALUM | 407.80 | 412.20 | Rs +123 | SIGNAL_FLIP |
| 60 | LONG | SWING | MUTHOOTFIN | 3487.70 | 3443.50 | Rs -177 | STOPLOSS |
| 61 | LONG | SWING | M&M | 3106.50 | 3213.50 | Rs +321 | TARGET |